objects/Invoice_Statement__c.object
<CustomObject>
    <description>it is object for invoice statement object showing the status and description for that</description>
    <fields>
        <fullName>City__c</fullName>
        <description>here is the city of that  customer</description>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>here is company name for invoice statement</description>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>here is email address of that customer</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Grand_Total__c</fullName>
        <description>here is grand total of all line items</description>
        <label>Grand Total</label>
        <summarizedField>Line_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Line_Item__c.Invoice_Statement_No__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name_Of_Customer__c</fullName>
        <description>here is name of that customer</description>
        <label>Name Of Customer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>here is phone number of that customer</description>
        <label>Phone Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stree_Address__c</fullName>
        <description>here is address of that customer</description>
        <label>Stree Address</label>
        <type>TextArea</type>
    </fields>
    <label>Invoice Statement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Company_Name__c</columns>
        <columns>Name_Of_Customer__c</columns>
        <columns>Phone_Number__c</columns>
        <columns>Stree_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{000000}</displayFormat>
        <label>Invoice Statement No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>